--- a/project/board/static/board/css/board_post/board_post_mobile.css
+++ b/project/board/static/board/css/board_post/board_post_mobile.css
@@ -82,13 +82,28 @@
 .board__pannel__top a {
     text-decoration: none;
     display: inline-block;
-    height: 100%;
-    width: auto;
+}
+@media (min-width: 360px) {
+    .board__pannel__top a {
+        height: 100%;
+        width: auto;
+    }
+
+    .board__pannel__top img {
+        height:100%;
+    }
 }
 
-.board__pannel__top img {
-    height:100%;
+@media (max-width: 360px) {
+    .board__pannel__top a {
+        margin-top: 3px;
+    }
+    .board__pannel__top img {
+        width: 55px;
+    }
 }
+
+
 
 .board__pannel__left {
     display: flex;
@@ -474,8 +489,11 @@
     display:flex;
     justify-content: center;
     flex-direction: row;
+    align-items: center;
 }
 
 #hothot {
     margin-left: -10px;
 }
+
+
