--- a/project/templates/login_base.html
+++ b/project/templates/login_base.html
@@ -52,9 +52,7 @@
                     </ul>
                 {% else %}
                 <a href="{% url 'core:accounts:login' univ.url_name %}" id="board__header__a">
-                    <div class="board__header__login">
-                        LOG IN / SIGN UP
-                    </div>
+                    <img src="{% static "/svg/login-signup.svg" %}">
                 </a>
                 {% endif %}
                 </div>
