--- a/project/board/static/board/css/post_new.css
+++ b/project/board/static/board/css/post_new.css
@@ -56,7 +56,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 5px;
+  padding: 5px 25px;
   background-color: #f0f0f0;
 }
 
@@ -85,6 +85,7 @@
 }
 
 #id_content {
+  height: 230px;
   resize: none;
   word-break: break-word;
 }
@@ -93,7 +94,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 10px 25px;
+  margin: 0 25px 10px;
 }
 
 .form__bottom__left {
@@ -174,5 +175,11 @@
 
   #id_ctgy {
     background-color: white;
+  }
+}
+
+@media (max-width: 376px) {
+  #id_content {
+    height: 250px;
   }
 }
