--- a/project/chat/templates/chat/index.html
+++ b/project/chat/templates/chat/index.html
@@ -114,11 +114,13 @@
 
     sb.connect("{{ user.username }}", async function (user, error) {
         if (error) return;
-        const channels = await loadChatList() 
+        const channels = await loadChatList()
         const btns = await renderChatList(channels, chat_list, chat_header, chat_box)
         const users = await loadUsers()
-        const btn = findChatBtn(btns, users,"{{other}}","{{type}}")
-        btn.click()
+        if(window.innerWidth > 768){
+            const btn = findChatBtn(btns, users,"{{other}}","{{type}}")
+            btn.click()
+        }
     });
 
 
@@ -127,10 +129,15 @@
     })
 
     chat_text_btn.addEventListener('click', async (e) => {
-        if (chat_text.value != "") {
+        let msg = chat_text.value
+        if (sb.currentUser.userId == "adm" && chat_text.value.split('/').length > 1 && chat_text.value.split('/')[0] == "invite"){
+            const user = chat_text.value.split('/')[1]
+            msg = `<button id="matchTo${user}">match</button>`
+        }
+        if (msg.trim() != "") {
             sb.GroupChannel.getChannel(chat_box.getAttribute('url'), async (groupChannel, error) => {
                 if (error) return
-                groupChannel.sendUserMessage(chat_text.value, async (message, error) => {
+                groupChannel.sendUserMessage(msg, async (message, error) => {
                     if (error) return
                     chat_box.innerHTML += strfy(message, groupChannel.customType)
                     chat_box.scrollTop = chat_box.scrollHeight;
@@ -149,9 +156,10 @@
         if (error) return;
         const channels = await loadChatList()
         const btns_m = await renderChatList(channels, chat_list_m, chat_header_m, chat_box_m)
-        const users = await loadUsers()
-        const btn = findChatBtn(btns_m, users,"{{other}}","{{type}}")
-        btn.click()
+        if(window.innerWidth > 768){
+            const btn = findChatBtn(btns, users,"{{other}}","{{type}}")
+            btn.click()
+        }
     });
 
 
@@ -160,10 +168,15 @@
     })
 
     chat_text_btn_m.addEventListener('click', async (e) => {
-        if (chat_text_m.value != "") {
-            sb.GroupChannel.getChannel(chat_box_m.getAttribute('url'), async (groupChannel, error) => {
+        let msg = chat_text_m.value
+        if (sb.currentUser.userId == "adm" && chat_text_m.value.split('/').length > 1 && chat_text_m.value.split('/')[0] == "invite"){
+            const user = chat_text_m.value.split('/')[1]
+            msg = `<button id="match_mTo${user}" to="${user}">match</button>`
+        }
+        if (msg.trim() != "") {
+            sb.GroupChannel.getChannel(chat_box.getAttribute('url'), async (groupChannel, error) => {
                 if (error) return
-                groupChannel.sendUserMessage(chat_text_m.value, async (message, error) => {
+                groupChannel.sendUserMessage(msg, async (message, error) => {
                     if (error) return
                     chat_box_m.innerHTML += strfy(message, groupChannel.customType)
                     chat_box_m.scrollTop = chat_box_m.scrollHeight;
