--- a/project/chat/templates/chat/index.html
+++ b/project/chat/templates/chat/index.html
@@ -112,13 +112,32 @@
         window.history.back();
     }
 
+    if("{{match}}" != "None") console.log("{{match}}")
+
     sb.connect("{{ user.username }}", async function (user, error) {
         if (error) return;
+        try{
+            if("{{match}}" != "None") await openAChat("{{match}}", 'anon')
+        }
+        catch (e) {
+            alert(e)
+        }
         const channels = await loadChatList()
         const btns = await renderChatList(channels, chat_list, chat_header, chat_box)
+        const btns_m = await renderChatList(channels, chat_list_m, chat_header_m, chat_box_m)
         const users = await loadUsers()
         if(window.innerWidth > 768){
-            const btn = findChatBtn(btns, users,"{{other}}","{{type}}")
+            if("{{match}}" != "None"){
+                const btn = findChatBtn(btns, users,"{{match}}","anon")
+                btn.click()
+            }
+            else {
+                const btn = findChatBtn(btns, users,"{{other}}","{{type}}")
+                btn.click()
+            }
+        }
+        else if ("{{match}}" != "None"){
+            const btn = findChatBtn(btns_m, users,"{{match}}","anon")
             btn.click()
         }
     });
@@ -132,7 +151,7 @@
         let msg = chat_text.value
         if (sb.currentUser.userId == "adm" && chat_text.value.split('/').length > 1 && chat_text.value.split('/')[0] == "invite"){
             const user = chat_text.value.split('/')[1]
-            msg = `<button id="matchTo${user}">match</button>`
+            msg = `<form action="" method="get"><input type="hidden" name="match" value="${user}"><input type="submit" value="match"></form>`
         }
         if (msg.trim() != "") {
             sb.GroupChannel.getChannel(chat_box.getAttribute('url'), async (groupChannel, error) => {
@@ -153,29 +172,23 @@
     <!-- mobile -->
     
     sb.connect("{{ user.username }}", async function (user, error) {
-        if (error) return;
-        const channels = await loadChatList()
-        const btns_m = await renderChatList(channels, chat_list_m, chat_header_m, chat_box_m)
-        if(window.innerWidth > 768){
-            const btn = findChatBtn(btns, users,"{{other}}","{{type}}")
-            btn.click()
-        }
+
     });
 
 
     chat_text_m.addEventListener('keypress', async (e) => {
-        if (e.key == 'Enter' && chat_box.getAttribute('url') != 'none' && chat_text_m.value != "") chat_text_btn_m.click()
+        if (e.key == 'Enter' && chat_box_m.getAttribute('url') != 'none' && chat_text_m.value != "") chat_text_btn_m.click()
     })
 
     chat_text_btn_m.addEventListener('click', async (e) => {
         let msg = chat_text_m.value
         if (sb.currentUser.userId == "adm" && chat_text_m.value.split('/').length > 1 && chat_text_m.value.split('/')[0] == "invite"){
             const user = chat_text_m.value.split('/')[1]
-            msg = `<button id="match_mTo${user}" to="${user}">match</button>`
+            msg = `<form action="" method="get"><input type="hidden" name="match" value="${user}"><input type="submit" value="match"></form>`
         }
         if (msg.trim() != "") {
-            sb.GroupChannel.getChannel(chat_box.getAttribute('url'), async (groupChannel, error) => {
-                if (error) return
+            sb.GroupChannel.getChannel(chat_box_m.getAttribute('url'), async (groupChannel, error) => {
+                if (error) alert(error)
                 groupChannel.sendUserMessage(msg, async (message, error) => {
                     if (error) return
                     chat_box_m.innerHTML += strfy(message, groupChannel.customType)
