이미 있는 채팅이면 바로 연결, 익명채팅 프로필사진 Anon.svg

--- a/project/chat/templates/chat/index.html
+++ b/project/chat/templates/chat/index.html
@@ -120,7 +120,7 @@
             if("{{match}}" != "None") await openAChat("{{match}}", 'anon')
         }
         catch (e) {
-            alert(e)
+            if(e.message == 1) {}
         }
         const channels = await loadChatList()
         const btns = await renderChatList(channels, chat_list, chat_header, chat_box)
