--- a/project/board/static/board/css/report_css.css
+++ b/project/board/static/board/css/report_css.css
@@ -1,3 +1,6 @@
+{% load static %}
+
+
 .report-modal {
     display:none;
     flex-direction: column;
@@ -13,11 +16,107 @@
 }
 
 .report-form-container {
+    font-family: YDIYGO320;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 50%;
     height: 50%;
+    border-radius: 12px;
+    padding: 30px 0;
     background-color: white;
 }
-
-.on-report-modal {
+/* 
+#on-report-modal {
     display: flex;
+} */
+
+.report-radio__wrap {
+    width: 50%;
+    display: flex;
+    justify-content: space-between;
+    background-color:#e8e8e8;
+    padding: 10px 30px;
+    border-radius: 8px;
+    margin: 2.5px 0;
 }
+
+.report-button {
+    border: none;
+    color: #fff;
+    background-color:#e26b7f;
+    width: 50%;
+    padding: 10px 30px;
+    border-radius: 8px;
+    margin-top:5px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.report-button img {
+    position: absolute;
+    left: 25px;
+    height: 60%;
+}
+
+@media(max-width: 768px) {
+    .report-form-container {
+        font-family: YDIYGO320;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 90%;
+        height: 50%;
+        border-radius: 12px;
+        padding: 30px 0;
+        background-color: white;
+    }
+    .report-radio__wrap {
+        width: 70%;
+        display: flex;
+        justify-content: space-between;
+        background-color:#e8e8e8;
+        padding: 10px 30px;
+        border-radius: 8px;
+        margin: 2.5px 0;
+    }
+    .report-button {
+        border: none;
+        color: #fff;
+        background-color:#e26b7f;
+        width: 70%;
+        padding: 10px 30px;
+        border-radius: 8px;
+        margin-top:5px;
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+    }
+
+
+}
+
+
+
+/* 
+input[type="radio"] {
+    display:none;
+}
+
+input[type="radio"] + label span {
+    display:inline-block;
+    width:19px;
+    height:19px;
+    margin:-2px 10px 0 0;
+    vertical-align:middle;
+    background:url("/static/board/png/checkbox.png") left top no-repeat;
+    cursor:pointer;
+}
+input[type="radio"]:checked + label span {
+    background:url('/project/core/static/png/checkbox-clicked.png') -19px top no-repeat;
+} */
