--- a/project/board/static/board/css/post_detail.css
+++ b/project/board/static/board/css/post_detail.css
@@ -71,6 +71,10 @@
   justify-content: center;
 }
 
+.flex_direction_column {
+  flex-direction: column;
+}
+
 #post__category {
   background-color: #eff2f4;
   padding: 3px 20px;
@@ -140,14 +144,14 @@
   margin: 10px 0;
 }
 
-#post__info {
+.post__info {
   width: 70%;
   display: flex;
   justify-content: space-between;
   padding: 20px 0 10px;
 }
 
-#post__info > div {
+.post__info > div {
   width: 33%;
   text-align: center;
   display: flex;
@@ -185,11 +189,63 @@
   cursor: pointer;
 }
 
+.post__share:hover {
+  font-weight: bolder;
+}
+
 .post__share > img {
   width: 20px;
   margin-right: 15px;
 }
 
+#post__info__bottom {
+  width: 50%;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 0;
+  align-items: center;
+}
+
+#post__info__bottom > div {
+  width: 50%;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.post__edit {
+  font-family: YDIYGO320;
+  border-right: 1.5px solid #e3e3e3;
+}
+
+.post__edit > img {
+  width: 20px;
+  margin-right: 15px;
+}
+
+.post__edit > a {
+  text-decoration: none;
+  color: black;
+}
+
+.post__edit > a:hover {
+  font-weight: bolder;
+}
+
+
+.post__delete__form {
+  font-family: YDIYGO320;
+}
+
+.post__delete__form > img {
+  width: 20px;
+  margin-right: 10px;
+}
+
+.post__delete__form > button:hover {
+  font-weight: bolder;
+}
 
 /* comment */
 .comment__form__row {
@@ -257,6 +313,10 @@
   cursor: pointer;
 }
 
+.comment__checkbox + label:hover {
+  border: 2px solid black;
+}
+
 .comment__checkbox:checked + label {
   background-color: #4fbcbd;
 }
@@ -267,6 +327,10 @@
   padding: 5px 15px;
   margin-left: 10px;
   color: #cecece;
+}
+
+.comment__write:hover {
+  color: black;
 }
 
 .comment__top {
@@ -328,6 +392,10 @@
   height: 100%;
   color: #cecece;
   font-weight: 400;
+}
+
+.comment__comment:hover {
+  color: black;
 }
 
 .comment__bottom {
@@ -412,9 +480,13 @@
     font-family: YDIYGO320;
   }
 
-  #post__info {
+  .post__info {
     width: 100%;
     padding-bottom: 0;
+  }
+
+  #post__info__bottom {
+    width: 80%;
   }
 
   .comment__write {
