add favicon / modify landing page

--- a/project/core/templates/core/main.html
+++ b/project/core/templates/core/main.html
@@ -48,7 +48,7 @@
           </div>
           <div class="landing__right_form_button">
             <button type="submit" class="reset-button">
-              <img src="{% static 'svg/next.svg' %}" alt="">
+              <img src="{% static 'core/images/next.png' %}" alt="">
             </button>
           </div>
         </form>
