--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -3,6 +3,7 @@
 <html lang="en">
 
 <head>
+    <link rel="shortcut icon" type="image/png" href="{% static '/ico/box-logo.ico' %}"/>
     <meta name="theme-color" content="#4fbcbd" />
     <meta name="apple-mobile-web-app-status-bar-style" content="#4fbcbd">
     <meta charset="UTF-8">
