--- a/project/board/templates/board/main_board.html
+++ b/project/board/templates/board/main_board.html
@@ -185,7 +185,7 @@
         <div class="board__pannel__right">
             <a href="{% url 'core:board:post_create' univ.url_name %}">
                 <div class="pannel__right__create">
-                    <img src="{% static "svg/create-post.svg/" %}" alt="">
+                    <img src="{% static "svg/create-post.svg" %}" alt="">
                     <p>Create Post</p>
                 </div>
             </a>
